get personal data
