# docs/swagger.yaml
@@ -93,6 +93,13 @@ definitions:
           type: string
         type: array
     type: object
+  internal.PersonalDataRequest:
+    properties:
+      data_type:
+        type: string
+      dialog_id:
+        type: string
+    type: object
   internal.User:
     properties:
       created_at:
@@ -403,6 +410,37 @@ paths:
       summary: Login
       tags:
       - user
+  /personal_data:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Personal Data object
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/internal.PersonalDataRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+      summary: Get personal data call only from ai sufler
+      tags:
+      - personal_data
   /profile:
     get:
       consumes:
