# internal/delivery/http/v1/handler.go
@@ -47,4 +47,6 @@ func Init(uc *usecase.UseCase, mx *mux.Router, log *slog.Logger) {
 	mx.HandleFunc(apiPath+"/dialog/{id}", h.DialogDelete).Methods(http.MethodDelete, http.MethodOptions)
 	mx.HandleFunc(apiPath+"/dialog/{id}", h.DialogUpdate).Methods(http.MethodPut, http.MethodOptions)
 	mx.HandleFunc(apiPath+"/dialog/{id}", h.DialogGet).Methods(http.MethodGet, http.MethodOptions)
+
+	mx.HandleFunc(apiPath+"/personal_data", h.GetPersonalData).Methods(http.MethodPost, http.MethodOptions)
 }
